# dari

./: .gitignore  .travis.yml  LICENSE  README.md  _config.yml  advanced.md  circle.yml  configuration.md  database-backends.md  documentation.md  download.md  index.md  models.md  pom.xml  predicate.md
_layouts/: basic.html  documentation.html
app-archetype/: pom.xml
asm/: pom.xml
aws/: pom.xml
css/: main.css
db/: pom.xml
db/etc/: clirr-ignored.xml
docs/: style-guide.md  sync
docs/documentation/: CNAME  annotations.md  contribute.md  database-backends.md  documentation.md  download.md  index.md  license.md  models.md  querying.md
docs/reference/: index.md
docs/upgrades/: 1.4.x-to-1.5.0.md  1.7.x-to-1.8.0.md  1.8.x-to-1.9.0.md
elasticsearch/: pom.xml
etc/: checkstyle.xml  findbugs-exclude.xml  pmd.xml
etc/mysql/: schema-11.sql  schema-12.sql  schema-countrecord.sql  schema-metric.sql
etc/oracle/: 1-dari.sql  2-schema.sql  3-grants.sql
grandparent/: pom.xml
image/: pom.xml
javadocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
jclouds/: pom.xml
mail/: pom.xml
maven/: pom.xml
mysql/: lib_mysqludf_dari.c
mysql/udf/: Makefile  Makefile.am  README.md  autorun.sh  configure.ac  lib_mysqludf_dari.c  lib_mysqludf_dari.sql
parent/: pom.xml
sms/: pom.xml
storage/: pom.xml
twilio/: pom.xml
util/: .pom.xml.swp  pom.xml
util-aws/: pom.xml
(+1371 files in other folders)
